# expense-lcl

./: CLAUDE.md  Cargo.toml
.github/workflows/: build.yml
assets/: financial_tips.json
docs/superpowers/plans/: 2026-04-06-budget-tracker-plan.md
docs/superpowers/specs/: 2026-04-06-budget-tracker-design.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs  llm.rs  main.rs  rag.rs  receipt.rs  subscription.rs
src/scripts/: analytics.js  app.js  camera.js  chat.js  dashboard.js  export.js  income.js  onboarding.js  projects.js  savings.js  subscriptions.js
src/styles/: main.css
