[package]
name = "budgy"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
llm = "0.1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
image = "0.25"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true