[package]
name = "buddy"
version = "0.1.0"
edition = "2021"

[lib]
name = "buddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
image = "0.25"
rand = "0.8"

[profile.release]
opt-level = "z"
lto = false
codegen-units = 1
strip = true

[target.aarch64-linux-android]
lto = false
